--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="../css/variables.css" />
 		<link rel="stylesheet" href="../css/nav.css" />
 		<link rel="stylesheet" href="../css/sign-up-style.css" />
+		<link rel="stylesheet" href="../css/footer-style.css" />
 	</head>
 	<body>
 		<header>
@@ -31,7 +32,7 @@
 		</header>
 		<figure>
 			<img
-				src="../assets/sign-up-banner.png"
+				src="../assets/banner (2).png"
 				alt="picture of the dragon ball gang"
 			/>
 		</figure>
@@ -40,20 +41,54 @@
 			<form action="submit">
 				<fieldset>
 					<legend>Name and address</legend>
-					<label for="first-name" id="first-name">First Name</label>
+					<div class="container">
+						<div class="left-firstname">
+							<label for="first-name" id="first-name">First Name</label>
+							<input
+								type="text"
+								id="first-name"
+								name="first-name"
+								placeholder="*Bob"
+							/>
+						</div>
+						<div class="right-lastname">
+							<label for="last-name">Last Name</label>
+							<input
+								type="text"
+								id="last-name"
+								name="last-name"
+								placeholder="*Smith"
+							/>
+						</div>
+					</div>
+					<label for="address">Address</label>
 					<input
 						type="text"
-						id="first-name"
-						name="first-name"
-						placeholder="*Bob"
+						id="address"
+						name="address"
+						placeholder="Address 1"
 					/>
-					<label for="last-name">Last Name</label>
-					<input type="text" id="last-name" name="last-name" />
-					<label for="address">Address</label>
-					<input type="text" id="address" name="address" />
-					<input type="text" id="address2" name="address2" />
-					<input type="text" id="postal-code" name="postal-code" />
-					<input type="text" id="city" name="city" />
+					<input
+						type="text"
+						id="address2"
+						name="address2"
+						placeholder="Address 2"
+					/>
+					<div class="container">
+						<div class="left-postal">
+							<input
+								type="text"
+								id="postal-code"
+								name="postal-code"
+								placeholder="Zip Code"
+							/>
+						</div>
+
+						<div class="right-city">
+							<input type="text" id="city" name="city" placeholder="City" />
+						</div>
+					</div>
+
 					<select name="country" id="country">
 						<option value="Norway">Norway</option>
 						<option value="Dragon Land">Dragon Land</option>
@@ -64,11 +99,121 @@
 				<fieldset>
 					<legend>Contact</legend>
 					<label for="phone">Phone</label>
-					<input type="tel" id="phone" name="phone" />
+					<input type="tel" id="phone" name="phone" placeholder="988 77 655" />
 					<label for="email">Email</label>
-					<input type="email" id="email" name="email" />
+					<input
+						type="email"
+						id="email"
+						name="email"
+						placeholder="example@domain.com"
+					/>
+					<input class="submit-btn" type="button" value="Submit" />
 				</fieldset>
 			</form>
 		</main>
+		<footer>
+			<div class="logo-container">
+				<img src="../assets/footer DBG logo.svg" alt="ssg logo" />
+			</div>
+
+			<section class="contact-us-container">
+				<h3>CONTACT US</h3>
+				<p>
+					<span
+						><img
+							width="26"
+							height="30"
+							src="../assets/footer-icons/email-icon.svg"
+							alt="mail icon"
+					/></span>
+					info@dragonballgang.com
+				</p>
+				<span>
+					<img
+						width="30"
+						height="30"
+						src="../assets/footer-icons/phone-icon.svg"
+						alt="phone icon"
+					/>
+				</span>
+				<p>(+47)911 55 911</p>
+
+				<p>
+					<span>
+						<img
+							width="30"
+							height="30"
+							src="../assets/footer-icons/location-icon.svg"
+							alt="location icon"
+						/>
+					</span>
+					Monster Carrot's Village 20
+					<span class="probably-not-optimal-way-of-moving-this-text"
+						>0161 earth</span
+					>
+				</p>
+			</section>
+			<section class="social-media-container">
+				<h4>SSG Social Media</h4>
+				<a href="#"
+					><img
+						src="../assets/footer-social-media-icons/tw-icon.svg"
+						alt="twitter icon"
+				/></a>
+				<a href="#"
+					><img
+						src="../assets/footer-social-media-icons/ig-icon.svg"
+						alt="twitter icon"
+				/></a>
+				<a href="#"
+					><img
+						src="../assets/footer-social-media-icons/fb-icon.svg"
+						alt="twitter icon"
+				/></a>
+				<a href="#"
+					><img
+						src="../assets/footer-social-media-icons/yt-icon.svg"
+						alt="twitter icon"
+				/></a>
+			</section>
+			<nav class="nav-container">
+				<ul class="politics">
+					<h4>Politics</h4>
+					<li>Our Politics</li>
+					<li>Partyporgram 2021-2025</li>
+					<li>Why DBG</li>
+					<li>What we've done for you</li>
+					<li>For students</li>
+					<li>Myth Buster</li>
+				</ul>
+				<ul class="party">
+					<h4>Party</h4>
+					<li>About SSG</li>
+					<li>Contact us</li>
+					<li>Politicians</li>
+					<li>Employees</li>
+					<li>Laws and ethical codes</li>
+					<li>Vacancies</li>
+				</ul>
+				<ul class="regional">
+					<h4>Regional political parties</h4>
+					<li>Monster Village</li>
+					<li>West City</li>
+					<li>Papaya Island</li>
+					<li>East City</li>
+					<li>Fire Mountain</li>
+				</ul>
+				<ul class="other-languages">
+					<h4>Other Languages</h4>
+					<li>Norwegian</li>
+					<li>Bosanski</li>
+					<li>Türkçe</li>
+					<li>日本</li>
+					<li>中国語</li>
+					<li>ภาษาไทย,</li>
+					<li>தமிழ்</li>
+				</ul>
+			</nav>
+		</footer>
 	</body>
 </html>
