--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -111,11 +111,13 @@
 				</fieldset>
 			</form>
 		</main>
+		<!-- FOOTER -->
 		<footer>
+			<!-- LOGO -->
 			<div class="logo-container">
 				<img src="../assets/footer DBG logo.svg" alt="ssg logo" />
 			</div>
-
+			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
 				<p>
@@ -153,65 +155,123 @@
 					>
 				</p>
 			</section>
+			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
 				<a href="#"
 					><img
+						width="42"
+						height="42"
 						src="../assets/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
+						width="42"
+						height="42"
 						src="../assets/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
+						width="42"
+						height="42"
 						src="../assets/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
+						width="42"
+						height="42"
 						src="../assets/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
 				/></a>
 			</section>
+			<!-- NAV -->
 			<nav class="nav-container">
-				<ul class="politics">
+				<ul>
 					<h4>Politics</h4>
-					<li>Our Politics</li>
-					<li>Partyporgram 2021-2025</li>
-					<li>Why DBG</li>
-					<li>What we've done for you</li>
-					<li>For students</li>
-					<li>Myth Buster</li>
+					<a href="#">
+						<li>Our Politics</li>
+					</a>
+					<a href="#">
+						<li>Partyporgram 2021-2025</li>
+					</a>
+					<a href="#">
+						<li>Why DBG</li>
+					</a>
+					<a href="#">
+						<li>What we've done for you</li>
+					</a>
+					<a href="#">
+						<li>For students</li>
+					</a>
+					<a href="#">
+						<li>Myth Buster</li>
+					</a>
 				</ul>
-				<ul class="party">
+				<ul>
 					<h4>Party</h4>
-					<li>About SSG</li>
-					<li>Contact us</li>
-					<li>Politicians</li>
-					<li>Employees</li>
-					<li>Laws and ethical codes</li>
-					<li>Vacancies</li>
+					<a href="">
+						<li>About SSG</li>
+					</a>
+					<a href="#">
+						<li>Contact us</li>
+					</a>
+					<a href="#">
+						<li>Politicians</li>
+					</a>
+					<a href="#">
+						<li>Employees</li>
+					</a>
+					<a href="#">
+						<li>Laws and ethical codes</li>
+					</a>
+					<a href="#">
+						<li>Vacancies</li>
+					</a>
 				</ul>
-				<ul class="regional">
+				<ul>
 					<h4>Regional political parties</h4>
-					<li>Monster Village</li>
-					<li>West City</li>
-					<li>Papaya Island</li>
-					<li>East City</li>
-					<li>Fire Mountain</li>
+					<a href="#">
+						<li>Monster Village</li>
+					</a>
+					<a href="#">
+						<li>West City</li>
+					</a>
+					<a href="#">
+						<li>Papaya Island</li>
+					</a>
+					<a href="#">
+						<li>East City</li>
+					</a>
+					<a href="#">
+						<li>Fire Mountain</li>
+					</a>
 				</ul>
-				<ul class="other-languages">
+				<ul>
 					<h4>Other Languages</h4>
-					<li>Norwegian</li>
-					<li>Bosanski</li>
-					<li>Türkçe</li>
-					<li>日本</li>
-					<li>中国語</li>
-					<li>ภาษาไทย,</li>
-					<li>தமிழ்</li>
+					<a href="#">
+						<li>Norwegian</li>
+					</a>
+					<a href="#">
+						<li>Bosanski</li>
+					</a>
+					<a href="#">
+						<li>Türkçe</li>
+					</a>
+					<a href="#">
+						<li>日本</li>
+					</a>
+					<a href="#">
+						<li>中国語</li>
+					</a>
+					<a href="#">
+						<li>ภาษาไทย,</li>
+					</a>
+					<a href="#">
+						<li>தமிழ்</li>
+					</a>
 				</ul>
 			</nav>
 		</footer>
