finished the blog page, added the assets fpot the blog page

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -9,12 +9,12 @@
 		<link rel="stylesheet" href="../css/fonts.css" />
 		<link rel="stylesheet" href="../css/variables.css" />
 		<link rel="stylesheet" href="../css/nav.css" />
-		<link rel="stylesheet" href="../css/sign-up-style.css" />
-		<link rel="stylesheet" href="../css/footer-style.css" />
+		<link rel="stylesheet" href="../css/sign-up.css" />
+		<link rel="stylesheet" href="../css/footer.css" />
 	</head>
 	<body>
 		<header>
-			<a href="index.html"
+			<a href="../index.html"
 				><img
 					width="65"
 					height="50"
@@ -23,9 +23,9 @@
 			/></a>
 			<nav>
 				<ul>
-					<li><a href="#">About SSG</a></li>
-					<li><a href="#">Politicians</a></li>
-					<li><a href="#">Blog</a></li>
+					<li><a href="about-ssg.html">About SSG</a></li>
+					<li><a href="polticians.html">Politicians</a></li>
+					<li><a href="blog.html">Blog</a></li>
 					<li><a href="#">Join SSG</a></li>
 				</ul>
 			</nav>
