--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/fonts.css" />
 		<link rel="stylesheet" href="css/variables.css" />
-		<link rel="stylesheet" href="css/index-style.css" />
+		<link rel="stylesheet" href="css/index.css" />
 		<link rel="stylesheet" href="css/nav.css" />
 		<title>SSG</title>
 	</head>
@@ -19,10 +19,10 @@
 				/></a>
 				<nav>
 					<ul>
-						<li><a href="#">About SSG</a></li>
-						<li><a href="#">Politicians</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Join SSG</a></li>
+						<li><a href="pages/about-ssg.html">About SSG</a></li>
+						<li><a href="pages/polticians.html">Politicians</a></li>
+						<li><a href="pages/blog.html">Blog</a></li>
+						<li><a href="pages/sign-up.html">Join SSG</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -36,8 +36,8 @@
 				</p>
 				<div class="container">
 					<div class="left">
-						<a href=""><button>Join SSG</button></a>
-						<a href="#">Learn more...</a>
+						<a href="pages/sign-up.html"><button>Join SSG</button></a>
+						<a href="pages/about-ssg.html">Learn more...</a>
 					</div>
 					<div class="right">
 						<ul>
