made politicians page and sub pages,. Made blog page and sub pages

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -33,64 +33,82 @@
 		<main>
 			<h1>Stories</h1>
 			<section>
-				<figure>
-					<img
-						src="../assets/blog/kamehameha.png"
-						alt="guy performing kamehameha at aliens"
-					/>
-				</figure>
-				<h2>How Kamehameha Saved the Atlantic from Aliens</h2>
-				<p>07.09.21</p>
+				<a href="blog-posts/kamehameha.html">
+					<figure>
+						<img
+							width="300"
+							src="../assets/blog/kamehameha.png"
+							alt="guy performing kamehameha at aliens"
+						/>
+					</figure>
+					<h2>How Kamehameha Saved the Atlantic from Aliens</h2>
+					<p>07.09.21</p>
+				</a>
 			</section>
 			<section>
-				<figure>
-					<img
-						src="../assets/blog/10-ways-to.png"
-						alt="group of happy people cheering"
-					/>
-				</figure>
-				<h2>10 ways to understand how to go supersaiyan</h2>
-				<p>13.09.21</p>
+				<a href="blog-posts/10-ways.html">
+					<figure>
+						<img
+							width="300"
+							src="../assets/blog/10-ways-to.png"
+							alt="group of happy people cheering"
+						/>
+					</figure>
+					<h2>10 Ways to Understand How to Go Supersaiyan</h2>
+					<p>13.09.21</p>
+				</a>
 			</section>
 			<section>
-				<figure>
-					<img
-						src="../assets/blog/our-promises-to.png"
-						alt="Father giving icecream to his upset child"
-					/>
-				</figure>
-				<h2>Our promises to the world</h2>
-				<p>15.09.21</p>
+				<a href="blog-posts/our-promises.html">
+					<figure>
+						<img
+							width="300"
+							src="../assets/blog/our-promises-to.png"
+							alt="Father giving icecream to his upset child"
+						/>
+					</figure>
+					<h2>Our Promises to the World</h2>
+					<p>15.09.21</p>
+				</a>
 			</section>
 			<section>
-				<figure>
-					<img
-						src="../assets/blog/how-to-perform.png"
-						alt="Smug person looking into the camera"
-					/>
-				</figure>
-				<h2>How to perform tax evasion</h2>
-				<p>16.09.21</p>
+				<a href="blog-posts/how-to-perform.html">
+					<figure>
+						<img
+							width="300"
+							src="../assets/blog/how-to-perform.png"
+							alt="Smug person looking into the camera"
+						/>
+					</figure>
+					<h2>How to Perform Tax Evasion</h2>
+					<p>16.09.21</p>
+				</a>
 			</section>
 			<section>
-				<figure>
-					<img
-						src="../assets/blog/pesnsions-for-senior.png"
-						alt="happy old man"
-					/>
-				</figure>
-				<h2>Pensions for senior citizens increased</h2>
-				<p>25.09.21</p>
+				<a href="blog-posts/pensions-for-senior.html">
+					<figure>
+						<img
+							width="300"
+							src="../assets/blog/pesnsions-for-senior.png"
+							alt="happy old man"
+						/>
+					</figure>
+					<h2>Pensions For Senior Citizens Increased</h2>
+					<p>25.09.21</p>
+				</a>
 			</section>
 			<section>
-				<figure>
-					<img
-						src="../assets/blog/the-health-benefits.png"
-						alt="Goku performing kaioken"
-					/>
-				</figure>
-				<h2>The health benefits of kaioken (SHOCKING!)</h2>
-				<p>29.09.21</p>
+				<a href="blog-posts/the-health-benefits.html">
+					<figure>
+						<img
+							width="300"
+							src="../assets/blog/the-health-benefits.png"
+							alt="Goku performing kaioken"
+						/>
+					</figure>
+					<h2>The Health Benefits of Kaioken (SHOCKING!)</h2>
+					<p>29.09.21</p>
+				</a>
 			</section>
 		</main>
 
