--- a/pages/politicians/piccolo.html
+++ b/pages/politicians/piccolo.html
@@ -4,77 +4,86 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>About SSG</title>
-		<link rel="stylesheet" href="../css/reset.css" />
-		<link rel="stylesheet" href="../css/fonts.css" />
-		<link rel="stylesheet" href="../css/variables.css" />
-		<link rel="stylesheet" href="../css/nav.css" />
-		<link rel="stylesheet" href="../css/about-ssg.css" />
-		<link rel="stylesheet" href="../css/footer.css" />
+		<title>SSG Piccolo</title>
+		<link rel="stylesheet" href="../../css/reset.css" />
+		<link rel="stylesheet" href="../../css/fonts.css" />
+		<link rel="stylesheet" href="../../css/variables.css" />
+		<link rel="stylesheet" href="../../css/nav.css" />
+		<link rel="stylesheet" href="../../css/footer.css" />
+		<link rel="stylesheet" href="../../css/politicians-member.css" />
 	</head>
 	<body>
 		<header>
-			<a href="../index.html"
+			<a href="../../index.html"
 				><img
 					width="65"
 					height="50"
-					src="../assets/DBG logo.svg"
+					src="../../assets/DBG logo.svg"
 					alt="SSG logo"
 			/></a>
 			<nav>
 				<ul>
-					<li><a href="#">About SSG</a></li>
-					<li><a href="polticians.html">Politicians</a></li>
-					<li><a href="blog.html">Blog</a></li>
-					<li><a href="sign-up.html">Join SSG</a></li>
+					<li><a href="../about-ssg.html">About SSG</a></li>
+					<li><a href="../polticians.html">Politicians</a></li>
+					<li><a href="../blog.html">Blog</a></li>
+					<li><a href="../sign-up.html">Join SSG</a></li>
 				</ul>
 			</nav>
 		</header>
 		<main>
+			<section>
+				<figure>
+					<img
+						width="180"
+						height="180"
+						src="../../assets/politicians/politicians/picolo.png"
+						alt="portrait of goku"
+					/>
+				</figure>
+				<div class="right">
+					<p>Deputy Head of SSG</p>
+					<h1>Piccolo Flauto</h1>
+					<p>
+						Piccolo is the deputy head of ssg, she has an education in beating
+						up aliens, and has saved the world mutiple of times.
+					</p>
+				</div>
+			</section>
 			<article>
-				<h1>About SSG</h1>
 				<p>
-					SSG is a party established in 2021 because of the need we saw in
-					collecting all the dragonballs so we could call upon Shenron and wish
-					for a better new world. And because we are strongly against the views
-					of all other parties? We don't really know anything about politics,
-					but believe that we are the best political party, so definitely join /
-					vote for us?
+					Consequat faucibus vel a, porttitor sed. Diam nunc, feugiat posuere
+					dictum. Erat aliquam viverra enim, massa ut neque, ac. Egestas viverra
+					nibh sit arcu aenean eu enim, nec. Lectus lacinia ac erat cras ut et
+					quis. Diam sit nisi, purus eu, tincidunt. Bibendum sollicitudin eros,
+					malesuada adipiscing. Laoreet diam imperdiet enim in egestas nulla mi
+					aliquet. Laoreet massa senectus non laoreet faucibus cras in. Lorem
+					ipsum dolor sit amet, consectetur adipiscing elit. Ultricies aliquam
+					lectus enim montes, ut viverra. Aliquam dictum felis, nulla mauris at.
+					Egestas habitasse turpis cursus commodo in eu, iaculis sit sit. Neque
+					nibh fermentum nisi arcu amet risus, nullam sed. Purus, etiam bibendum
+					cursus eu auctor.
 				</p>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nisl,
-					faucibus ante quisque sed quis dictum accumsan. In arcu purus sem
-					amet, aenean proin ultricies. Eleifend interdum orci euismod phasellus
-					facilisi proin. Quam fringilla et in ullamcorper risus vel purus et
-					aliquam. Enim, integer et dignissim risus in purus. Amet, vestibulum
-					erat quis sit. Vel, et amet, sapien, duis felis lorem est venenatis.
-					Non gravida arcu integer suscipit sagittis. Vel sem quis fusce sit
-					gravida cursus. Viverra senectus consequat mollis in ut. Ut consequat
-					nulla sit lacus eu eget accumsan amet.
+					Consequat faucibus vel a, porttitor sed. Diam nunc, feugiat posuere
+					dictum. Erat aliquam viverra enim, massa ut neque, ac. Egestas viverra
+					nibh sit arcu aenean eu enim, nec. Lectus lacinia ac erat cras ut et
+					quis. Diam sit nisi, purus eu, tincidunt. Bibendum sollicitudin eros,
+					malesuada adipiscing. Laoreet diam imperdiet enim in egestas nulla mi
+					aliquet. Laoreet massa senectus non laoreet faucibus cras in.
 				</p>
-
-				<q>Deep quote about deep meaningful things</q>
-				<p>-Some smart dude</p>
 			</article>
-			<figure>
-				<img
-					class="dragonballs-img"
-					src="../assets/about-ssg/dragonballssideimg.png"
-					alt="7 dragonballs"
-				/>
-				<!-- <img
-					class="shitty-cosplay-img"
-					src="../assets/about-ssg/sideimg.png"
-					alt="Guy cosplaying as frieza"
-				/> -->
-			</figure>
+			<aside>
+				<section>
+					<a href=""> </a>
+				</section>
+			</aside>
 		</main>
 
 		<!-- FOOTER -->
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
-				<img src="../assets/footer DBG logo.svg" alt="ssg logo" />
+				<img src="../../assets/footer DBG logo.svg" alt="ssg logo" />
 			</div>
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
@@ -84,7 +93,7 @@
 						><img
 							width="26"
 							height="30"
-							src="../assets/footer-icons/email-icon.svg"
+							src="../../assets/footer-icons/email-icon.svg"
 							alt="mail icon"
 					/></span>
 					info@dragonballgang.com
@@ -93,7 +102,7 @@
 					<img
 						width="30"
 						height="30"
-						src="../assets/footer-icons/phone-icon.svg"
+						src="../../assets/footer-icons/phone-icon.svg"
 						alt="phone icon"
 					/>
 				</span>
@@ -104,7 +113,7 @@
 						<img
 							width="30"
 							height="30"
-							src="../assets/footer-icons/location-icon.svg"
+							src="../../assets/footer-icons/location-icon.svg"
 							alt="location icon"
 						/>
 					</span>
@@ -121,28 +130,28 @@
 					><img
 						width="42"
 						height="42"
-						src="../assets/footer-social-media-icons/tw-icon.svg"
+						src="../../assets/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
 						width="42"
 						height="42"
-						src="../assets/footer-social-media-icons/ig-icon.svg"
+						src="../../assets/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
 						width="42"
 						height="42"
-						src="../assets/footer-social-media-icons/fb-icon.svg"
+						src="../../assets/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
 						width="42"
 						height="42"
-						src="../assets/footer-social-media-icons/yt-icon.svg"
+						src="../../assets/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
 				/></a>
 			</section>
@@ -154,7 +163,7 @@
 						<li>Our Politics</li>
 					</a>
 					<a href="#">
-						<li>Partyprogram 2021-2025</li>
+						<li>Partyporgram 2021-2025</li>
 					</a>
 					<a href="#">
 						<li>Why DBG</li>
