--- a/pages/polticians.html
+++ b/pages/polticians.html
@@ -45,10 +45,10 @@
 							/>
 						</figure>
 						<section class="information">
-							<a href="">
+							<a href="politicians/goku.html">
 								<h2>Goku Kakarrot</h2>
 							</a>
-							<p>Leader of SSP</p>
+							<p>Leader of SSG</p>
 						</section>
 					</li>
 					<li>
@@ -61,10 +61,10 @@
 							/>
 						</figure>
 						<section class="information">
-							<a href="">
+							<a href="politicians/chi.html">
 								<h2>Chi Chi</h2>
 							</a>
-							<p>Party Secretary of SSP</p>
+							<p>Party Secretary of SSG</p>
 						</section>
 					</li>
 					<li>
@@ -77,10 +77,10 @@
 							/>
 						</figure>
 						<section class="information">
-							<a href="">
+							<a href="politicians/piccolo.html">
 								<h2>Piccolo Flauto</h2>
 							</a>
-							<p>Deputy Head of SSP</p>
+							<p>Deputy Head of SSG</p>
 						</section>
 					</li>
 					<li>
@@ -93,10 +93,10 @@
 							/>
 						</figure>
 						<section class="information">
-							<a href="">
+							<a href="politicians/vegeta.html">
 								<h2>Vegeta Vegeta</h2>
 							</a>
-							<p>Deputy Head of SSP</p>
+							<p>Deputy Head of SSG</p>
 						</section>
 					</li>
 					<li>
@@ -109,10 +109,10 @@
 							/>
 						</figure>
 						<section class="information">
-							<a href="">
+							<a href="politicians/krillin.html">
 								<h2>Krillin Krill</h2>
 							</a>
-							<p>Parliamentary Candidate of SSP</p>
+							<p>Parliamentary Candidate of SSG</p>
 						</section>
 					</li>
 					<li>
@@ -125,10 +125,10 @@
 							/>
 						</figure>
 						<section class="information">
-							<a href="">
+							<a href="politicians/tien.html">
 								<h2>Tien Shinhan</h2>
 							</a>
-							<p>Parliamentary Candidate of SSP</p>
+							<p>Parliamentary Candidate of SSG</p>
 						</section>
 					</li>
 				</ul>
