--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<title>SSG</title>
 	</head>
 	<body>
-		<div class="wrapper">
+		
 			<header>
 				<a href="index.html"
 					><img width="65" height="50" src="assets/DBG logo.svg" alt="SSG logo"
@@ -26,6 +26,7 @@
 					</ul>
 				</nav>
 			</header>
+			<div class="wrapper"></div>
 			<main>
 				<h1>Super Saiyan Gang</h1>
 				<p>
