fixed a bug where I was declaring the decrotive font family twice, causing it to glitch out in the footer segment

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				</div>
 			</main>
 			<section class="showcase">
-				<video src="assets/movie4.mp4" muted loop autoplay></video>
+				<video src="assets/video-files/landing-page-bg-video.mp4" muted loop autoplay></video>
 			</section>
 		</div>
 	</body>
