--- a/pages/blog-posts/our-promises.html
+++ b/pages/blog-posts/our-promises.html
@@ -42,7 +42,7 @@
 					alt="people cheering"
 				/>
 				<figcaption>
-					People in low quality cheering for exciting things.
+					Father in low quality trying to cheer up his daughter.
 				</figcaption>
 			</figure>
 			<article>
@@ -87,8 +87,19 @@
 					nullam egestas blandit eu.
 				</p>
 			</article>
+			<aside>
+				<section>
+					<a href="../blog.html"
+						><img
+							width="60"
+							src="../../assets/back-arrow.svg"
+							alt="back arrow"
+						/>Go back</a
+					>
+				</section>
+			</aside>
 		</main>
-		<aside>
+		<aside class="popular-articles">
 			<h2>Popular Articles</h2>
 			<ul>
 				<li>
@@ -126,29 +137,28 @@
 				</li>
 			</ul>
 		</aside>
+		<!-- FOOTER -->
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
-				<img src="../../assets/footer DBG logo.svg" alt="ssg logo" />
+				<img src="../../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
-				<p>
-					<span
-						><img
-							width="26"
-							height="30"
-							src="../../assets/footer-icons/email-icon.svg"
-							alt="mail icon"
-					/></span>
-					info@dragonballgang.com
-				</p>
+				<span
+					><img
+						width="26"
+						height="30"
+						src="../../assets/footer/footer-icons/email-icon.svg"
+						alt="mail icon"
+				/></span>
+				<p>info@dragonballgang.com</p>
 				<span>
 					<img
 						width="30"
 						height="30"
-						src="../../assets/footer-icons/phone-icon.svg"
+						src="../../assets/footer/footer-icons/phone-icon.svg"
 						alt="phone icon"
 					/>
 				</span>
@@ -159,7 +169,7 @@
 						<img
 							width="30"
 							height="30"
-							src="../../assets/footer-icons/location-icon.svg"
+							src="../../assets/footer/footer-icons/location-icon.svg"
 							alt="location icon"
 						/>
 					</span>
@@ -176,28 +186,28 @@
 					><img
 						width="42"
 						height="42"
-						src="../../assets/footer-social-media-icons/tw-icon.svg"
+						src="../../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
 						width="42"
 						height="42"
-						src="../../assets/footer-social-media-icons/ig-icon.svg"
+						src="../../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
 						width="42"
 						height="42"
-						src="../../assets/footer-social-media-icons/fb-icon.svg"
+						src="../../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
 						width="42"
 						height="42"
-						src="../../assets/footer-social-media-icons/yt-icon.svg"
+						src="../../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
 				/></a>
 			</section>
