--- a/pages/blog.html
+++ b/pages/blog.html
@@ -116,26 +116,24 @@
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
-				<img src="../assets/footer DBG logo.svg" alt="ssg logo" />
+				<img src="../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
-				<p>
-					<span
-						><img
-							width="26"
-							height="30"
-							src="../assets/footer-icons/email-icon.svg"
-							alt="mail icon"
-					/></span>
-					info@dragonballgang.com
-				</p>
+				<span
+					><img
+						width="26"
+						height="30"
+						src="../assets/footer/footer-icons/email-icon.svg"
+						alt="mail icon"
+				/></span>
+				<p>info@dragonballgang.com</p>
 				<span>
 					<img
 						width="30"
 						height="30"
-						src="../assets/footer-icons/phone-icon.svg"
+						src="../assets/footer/footer-icons/phone-icon.svg"
 						alt="phone icon"
 					/>
 				</span>
@@ -146,7 +144,7 @@
 						<img
 							width="30"
 							height="30"
-							src="../assets/footer-icons/location-icon.svg"
+							src="../assets/footer/footer-icons/location-icon.svg"
 							alt="location icon"
 						/>
 					</span>
@@ -163,28 +161,28 @@
 					><img
 						width="42"
 						height="42"
-						src="../assets/footer-social-media-icons/tw-icon.svg"
+						src="../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
 						width="42"
 						height="42"
-						src="../assets/footer-social-media-icons/ig-icon.svg"
+						src="../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
 						width="42"
 						height="42"
-						src="../assets/footer-social-media-icons/fb-icon.svg"
+						src="../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
 				/></a>
 				<a href="#"
 					><img
 						width="42"
 						height="42"
-						src="../assets/footer-social-media-icons/yt-icon.svg"
+						src="../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
 				/></a>
 			</section>
