Fixed titles and refactored some code

--- a/pages/blog-posts/how-to-perform.html
+++ b/pages/blog-posts/how-to-perform.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>How Kamehameha Saved the Atlantic from Aliens</title>
+		<title>How to Perform Tax Evasion</title>
 		<link rel="stylesheet" href="../../css/reset.css" />
 		<link rel="stylesheet" href="../../css/fonts.css" />
 		<link rel="stylesheet" href="../../css/variables.css" />
@@ -103,11 +103,11 @@
 					<a href="how-to-perform.html">
 						<img
 							width="300"
-							src="../../assets/blog/how-to-perform.png"
+							src="../../assets/blog/kamehameha.png"
 							alt="smug dude"
 						/>
-						<h3>How to Perform Tax Evasion</h3>
-						<p>16.09.21</p>
+						<h3>How Kamehameha Saved the Atlantic from Aliens</h3>
+						<p>07.09.21</p>
 					</a>
 				</li>
 				<li>
