--- a/pages/blog-posts/pensions-for-senior.html
+++ b/pages/blog-posts/pensions-for-senior.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>How Kamehameha Saved the Atlantic from Aliens</title>
+		<title>Pensions for Senior Citizens Increased</title>
 		<link rel="stylesheet" href="../../css/reset.css" />
 		<link rel="stylesheet" href="../../css/fonts.css" />
 		<link rel="stylesheet" href="../../css/variables.css" />
@@ -31,7 +31,7 @@
 			</nav>
 		</header>
 		<main>
-			<h1>Pensions For Senior Citizens Increased</h1>
+			<h1>Pensions for Senior Citizens Increased</h1>
 			<p>
 				Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum fuga
 				quas magni natus deserunt.
@@ -112,14 +112,14 @@
 					</a>
 				</li>
 				<li>
-					<a href="pensions-for-senior.html">
+					<a href="kamehameha.html">
 						<img
 							width="300"
-							src="../../assets/blog/pesnsions-for-senior.png"
+							src="../../assets/blog/kamehameha.png"
 							alt="old smiling dude"
 						/>
-						<h3>Pensions for Senior Citizens Increased</h3>
-						<p>25.09.21</p>
+						<h3>How Kamehameha Saved the Atlantic from Aliens</h3>
+						<p>07.09.21</p>
 					</a>
 				</li>
 				<li>
