--- a/pages/blog-posts/the-health-benefits.html
+++ b/pages/blog-posts/the-health-benefits.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>How Kamehameha Saved the Atlantic from Aliens</title>
+		<title>The Health Benefits of Kaioken</title>
 		<link rel="stylesheet" href="../../css/reset.css" />
 		<link rel="stylesheet" href="../../css/fonts.css" />
 		<link rel="stylesheet" href="../../css/variables.css" />
@@ -125,14 +125,14 @@
 					</a>
 				</li>
 				<li>
-					<a href="the-health-benefits.html">
+					<a href="kamehameha.html">
 						<img
 							width="300"
-							src="../../assets/blog/the-health-benefits.png"
-							alt="person doing kaioken"
+							src="../../assets/blog/kamehameha.png"
+							alt="old smiling dude"
 						/>
-						<h3>The Health Benefits of Kaioken (SHOCKING!)</h3>
-						<p>29.09.21</p>
+						<h3>How Kamehameha Saved the Atlantic from Aliens</h3>
+						<p>07.09.21</p>
 					</a>
 				</li>
 			</ul>
