--- a/pages/blog.html
+++ b/pages/blog.html
@@ -93,7 +93,7 @@
 							alt="happy old man"
 						/>
 					</figure>
-					<h2>Pensions For Senior Citizens Increased</h2>
+					<h2>Pensions for Senior Citizens Increased</h2>
 					<p>25.09.21</p>
 				</a>
 			</section>
