--- a/pages/blog.html
+++ b/pages/blog.html
@@ -45,6 +45,7 @@
 					<p>07.09.21</p>
 				</a>
 			</section>
+
 			<section>
 				<a href="blog-posts/10-ways.html">
 					<figure>
@@ -58,6 +59,7 @@
 					<p>13.09.21</p>
 				</a>
 			</section>
+
 			<section>
 				<a href="blog-posts/our-promises.html">
 					<figure>
@@ -71,6 +73,7 @@
 					<p>15.09.21</p>
 				</a>
 			</section>
+
 			<section>
 				<a href="blog-posts/how-to-perform.html">
 					<figure>
@@ -84,6 +87,7 @@
 					<p>16.09.21</p>
 				</a>
 			</section>
+
 			<section>
 				<a href="blog-posts/pensions-for-senior.html">
 					<figure>
@@ -97,6 +101,7 @@
 					<p>25.09.21</p>
 				</a>
 			</section>
+
 			<section>
 				<a href="blog-posts/the-health-benefits.html">
 					<figure>
@@ -118,17 +123,20 @@
 			<div class="logo-container">
 				<img src="../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
+
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
-				<span
-					><img
-						width="26"
+				<span>
+					<img
+						width="30"
 						height="30"
 						src="../assets/footer/footer-icons/email-icon.svg"
 						alt="mail icon"
-				/></span>
+					/>
+				</span>
 				<p>info@dragonballgang.com</p>
+
 				<span>
 					<img
 						width="30"
@@ -149,43 +157,52 @@
 						/>
 					</span>
 					Monster Carrot's Village 20
-					<span class="probably-not-optimal-way-of-moving-this-text"
-						>0161 earth</span
-					>
+					<span class="probably-not-optimal-way-of-moving-this-text">
+						0161 earth
+					</span>
 				</p>
 			</section>
+
 			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
-				<a href="#"
-					><img
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
-				/></a>
+					/>
+				</a>
 			</section>
+
 			<!-- NAV -->
 			<nav class="nav-container">
 				<ul>
@@ -193,43 +210,55 @@
 					<a href="#">
 						<li>Our Politics</li>
 					</a>
+
 					<a href="#">
 						<li>Partyporgram 2021-2025</li>
 					</a>
+
 					<a href="#">
 						<li>Why DBG</li>
 					</a>
+
 					<a href="#">
 						<li>What we've done for you</li>
 					</a>
+
 					<a href="#">
 						<li>For students</li>
 					</a>
+
 					<a href="#">
 						<li>Myth Buster</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Party</h4>
 					<a href="">
 						<li>About SSG</li>
 					</a>
+
 					<a href="#">
 						<li>Contact us</li>
 					</a>
+
 					<a href="#">
 						<li>Politicians</li>
 					</a>
+
 					<a href="#">
 						<li>Employees</li>
 					</a>
+
 					<a href="#">
 						<li>Laws and ethical codes</li>
 					</a>
+
 					<a href="#">
 						<li>Vacancies</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Regional political parties</h4>
 					<a href="#">
@@ -248,6 +277,7 @@
 						<li>Fire Mountain</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Other Languages</h4>
 					<a href="#">
