--- a/pages/blog-posts/our-promises.html
+++ b/pages/blog-posts/our-promises.html
@@ -30,6 +30,7 @@
 				</ul>
 			</nav>
 		</header>
+
 		<main>
 			<h1>Our Promises to the World</h1>
 			<p>
@@ -99,6 +100,7 @@
 				</section>
 			</aside>
 		</main>
+
 		<aside class="popular-articles">
 			<h2>Popular Articles</h2>
 			<ul>
@@ -137,6 +139,7 @@
 				</li>
 			</ul>
 		</aside>
+
 		<!-- FOOTER -->
 		<footer>
 			<!-- LOGO -->
@@ -146,39 +149,43 @@
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
-				<span
-					><img
-						width="26"
-						height="30"
-						src="../../assets/footer/footer-icons/email-icon.svg"
-						alt="mail icon"
-				/></span>
-				<p>info@dragonballgang.com</p>
-				<span>
-					<img
-						width="30"
-						height="30"
-						src="../../assets/footer/footer-icons/phone-icon.svg"
-						alt="phone icon"
-					/>
-				</span>
-				<p>(+47)911 55 911</p>
-
-				<p>
-					<span>
-						<img
-							width="30"
-							height="30"
-							src="../../assets/footer/footer-icons/location-icon.svg"
-							alt="location icon"
-						/>
-					</span>
-					Monster Carrot's Village 20
-					<span class="probably-not-optimal-way-of-moving-this-text"
-						>0161 earth</span
-					>
-				</p>
+				<ul>
+					<li>
+						<span>
+							<img
+								width="26"
+								height="30"
+								src="../../assets/footer/footer-icons/email-icon.svg"
+								alt="mail icon"
+							/>
+						</span>
+						<p>info@dragonballgang.com</p>
+					</li>
+					<li>
+						<span>
+							<img
+								width="30"
+								height="30"
+								src="../../assets/footer/footer-icons/phone-icon.svg"
+								alt="phone icon"
+							/>
+						</span>
+						<p>(+47)911 55 911</p>
+					</li>
+					<li>
+						<span>
+							<img
+								width="30"
+								height="30"
+								src="../../assets/footer/footer-icons/location-icon.svg"
+								alt="location icon"
+							/>
+						</span>
+						<p>Monster Carrot's Village 20 0161 earth</p>
+					</li>
+				</ul>
 			</section>
+
 			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
