--- a/pages/blog.html
+++ b/pages/blog.html
@@ -14,13 +14,14 @@
 	</head>
 	<body>
 		<header>
-			<a href="../index.html"
-				><img
+			<a href="../index.html">
+				<img
 					width="65"
 					height="50"
 					src="../assets/DBG logo.svg"
 					alt="SSG logo"
-			/></a>
+				/>
+			</a>
 			<nav>
 				<ul>
 					<li><a href="about-ssg.html">About SSG</a></li>
@@ -123,86 +124,78 @@
 			<div class="logo-container">
 				<img src="../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
-
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
-				<span>
-					<img
-						width="30"
-						height="30"
-						src="../assets/footer/footer-icons/email-icon.svg"
-						alt="mail icon"
-					/>
-				</span>
-				<p>info@dragonballgang.com</p>
-
-				<span>
-					<img
-						width="30"
-						height="30"
-						src="../assets/footer/footer-icons/phone-icon.svg"
-						alt="phone icon"
-					/>
-				</span>
-				<p>(+47)911 55 911</p>
-
-				<p>
-					<span>
-						<img
-							width="30"
-							height="30"
-							src="../assets/footer/footer-icons/location-icon.svg"
-							alt="location icon"
-						/>
-					</span>
-					Monster Carrot's Village 20
-					<span class="probably-not-optimal-way-of-moving-this-text">
-						0161 earth
-					</span>
-				</p>
+				<ul>
+					<li>
+						<span>
+							<img
+								width="26"
+								height="30"
+								src="../assets/footer/footer-icons/email-icon.svg"
+								alt="mail icon"
+							/>
+						</span>
+						<p>info@dragonballgang.com</p>
+					</li>
+					<li>
+						<span>
+							<img
+								width="30"
+								height="30"
+								src="../assets/footer/footer-icons/phone-icon.svg"
+								alt="phone icon"
+							/>
+						</span>
+						<p>(+47)911 55 911</p>
+					</li>
+					<li>
+						<span>
+							<img
+								width="30"
+								height="30"
+								src="../assets/footer/footer-icons/location-icon.svg"
+								alt="location icon"
+							/>
+						</span>
+						<p>Monster Carrot's Village 20 0161 earth</p>
+					</li>
+				</ul>
 			</section>
 
 			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
-				<a href="#">
-					<img
+				<a href="#"
+					><img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
-					/>
-				</a>
-
-				<a href="#">
-					<img
+				/></a>
+				<a href="#"
+					><img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
-					/>
-				</a>
-
-				<a href="#">
-					<img
+				/></a>
+				<a href="#"
+					><img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
-					/>
-				</a>
-
-				<a href="#">
-					<img
+				/></a>
+				<a href="#"
+					><img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
-					/>
-				</a>
+				/></a>
 			</section>
-
 			<!-- NAV -->
 			<nav class="nav-container">
 				<ul>
@@ -210,55 +203,43 @@
 					<a href="#">
 						<li>Our Politics</li>
 					</a>
-
 					<a href="#">
 						<li>Partyporgram 2021-2025</li>
 					</a>
-
 					<a href="#">
 						<li>Why DBG</li>
 					</a>
-
 					<a href="#">
 						<li>What we've done for you</li>
 					</a>
-
 					<a href="#">
 						<li>For students</li>
 					</a>
-
 					<a href="#">
 						<li>Myth Buster</li>
 					</a>
 				</ul>
-
 				<ul>
 					<h4>Party</h4>
 					<a href="">
 						<li>About SSG</li>
 					</a>
-
 					<a href="#">
 						<li>Contact us</li>
 					</a>
-
 					<a href="#">
 						<li>Politicians</li>
 					</a>
-
 					<a href="#">
 						<li>Employees</li>
 					</a>
-
 					<a href="#">
 						<li>Laws and ethical codes</li>
 					</a>
-
 					<a href="#">
 						<li>Vacancies</li>
 					</a>
 				</ul>
-
 				<ul>
 					<h4>Regional political parties</h4>
 					<a href="#">
@@ -277,7 +258,6 @@
 						<li>Fire Mountain</li>
 					</a>
 				</ul>
-
 				<ul>
 					<h4>Other Languages</h4>
 					<a href="#">
