Refactored the code, and removed the container class aswell as the left and right class from index.html

--- a/index.html
+++ b/index.html
@@ -11,85 +11,91 @@
 		<link rel="stylesheet" href="css/nav.css" />
 		<title>SSG</title>
 	</head>
+
 	<body>
-		
-			<header>
-				<a href="index.html"
-					><img width="65" height="50" src="assets/DBG logo.svg" alt="SSG logo"
-				/></a>
-				<nav>
-					<ul>
-						<li><a href="pages/about-ssg.html">About SSG</a></li>
-						<li><a href="pages/polticians.html">Politicians</a></li>
-						<li><a href="pages/blog.html">Blog</a></li>
-						<li><a href="pages/sign-up.html">Join SSG</a></li>
-					</ul>
-				</nav>
-			</header>
+		<header>
+			<a href="index.html"
+				><img width="65" height="50" src="assets/DBG logo.svg" alt="SSG logo"
+			/></a>
+			<nav>
+				<ul>
+					<li><a href="pages/about-ssg.html">About SSG</a></li>
+					<li><a href="pages/polticians.html">Politicians</a></li>
+					<li><a href="pages/blog.html">Blog</a></li>
+					<li><a href="pages/sign-up.html">Join SSG</a></li>
+				</ul>
+			</nav>
+		</header>
 
-			<main>
-				<h1>Super Saiyan Gang</h1>
-				<p>
-					He is learning as he fights! Lorem ipsum dolor sit amet, consectetur
-					adipiscing elit. Sed iaculis cursus egestas est nunc, sem diam et
-					elit. Ornare arcu, laoreet mauris sit. Amet maecenas sed augue odio
-					mollis lectus in. Tortor felis pharetra, pulvinar viverra.
-				</p>
+		<main>
+			<h1>Super Saiyan Gang</h1>
+			<p>
+				He is learning as he fights! Lorem ipsum dolor sit amet, consectetur
+				adipiscing elit. Sed iaculis cursus egestas est nunc, sem diam et elit.
+				Ornare arcu, laoreet mauris sit. Amet maecenas sed augue odio mollis
+				lectus in. Tortor felis pharetra, pulvinar viverra.
+			</p>
 
-				<div class="container">
-					<div class="left">
-						<a href="pages/sign-up.html"><button>Join SSG</button></a>
-						<a href="pages/about-ssg.html">Learn more...</a>
-				</div>
-					<div class="right">
-						<ul>
-							<li>
-								<a href="#">
-									<img
-										width="30"
-										height="30"
-										src="assets/icons/social-icons/tw-icon.svg"
-										alt="twitter icon"
-									/>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img
-										width="30"
-										height="30"
-										src="assets/icons/social-icons/ig-icon.svg"
-										alt="instagram icon"
-									/>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img
-										width="30"
-										height="30"
-										src="assets/icons/social-icons/fb-icon.svg"
-										alt="facebook icon"
-									/>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img
-										width="30"
-										height="30"
-										src="assets/icons/social-icons/yt-icon.svg"
-										alt="youtube icon"
-									/>
-								</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</main>
-			<section class="showcase">
-				<video src="assets/video-files/landing-page-bg-video.mp4" muted loop autoplay></video>
+			<section>
+				<aside>
+					<a href="pages/sign-up.html">Join SSG</a>
+					<a href="pages/about-ssg.html">Learn more...</a>
+				</aside>
+				<ul>
+					<li>
+						<a href="#">
+							<img
+								width="30"
+								height="30"
+								src="assets/icons/social-icons/tw-icon.svg"
+								alt="twitter icon"
+							/>
+						</a>
+					</li>
+
+					<li>
+						<a href="#">
+							<img
+								width="30"
+								height="30"
+								src="assets/icons/social-icons/ig-icon.svg"
+								alt="instagram icon"
+							/>
+						</a>
+					</li>
+
+					<li>
+						<a href="#">
+							<img
+								width="30"
+								height="30"
+								src="assets/icons/social-icons/fb-icon.svg"
+								alt="facebook icon"
+							/>
+						</a>
+					</li>
+
+					<li>
+						<a href="#">
+							<img
+								width="30"
+								height="30"
+								src="assets/icons/social-icons/yt-icon.svg"
+								alt="youtube icon"
+							/>
+						</a>
+					</li>
+				</ul>
 			</section>
-		</div>
+		</main>
+
+		<section class="showcase">
+			<video
+				src="assets/video-files/landing-page-bg-video.mp4"
+				muted
+				loop
+				autoplay
+			></video>
+		</section>
 	</body>
 </html>
