--- a/pages/blog-posts/the-health-benefits.html
+++ b/pages/blog-posts/the-health-benefits.html
@@ -12,15 +12,18 @@
 		<link rel="stylesheet" href="../../css/footer.css" />
 		<link rel="stylesheet" href="../../css/blog-post.css" />
 	</head>
+
 	<body>
 		<header>
-			<a href="../../index.html"
-				><img
+			<a href="../../index.html">
+				<img
 					width="65"
 					height="50"
 					src="../../assets/DBG logo.svg"
 					alt="SSG logo"
-			/></a>
+				/>
+			</a>
+
 			<nav>
 				<ul>
 					<li><a href="../about-ssg.html">About SSG</a></li>
@@ -30,6 +33,7 @@
 				</ul>
 			</nav>
 		</header>
+
 		<main>
 			<h1>The Health Benefits of Kaioken</h1>
 			<p>
@@ -99,6 +103,7 @@
 				</section>
 			</aside>
 		</main>
+
 		<aside class="popular-articles">
 			<h2>Popular Articles</h2>
 			<ul>
@@ -137,12 +142,13 @@
 				</li>
 			</ul>
 		</aside>
-		<!-- FOOTER -->
+
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
 				<img src="../../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
+
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
@@ -158,6 +164,7 @@
 						</span>
 						<p>info@dragonballgang.com</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -169,6 +176,7 @@
 						</span>
 						<p>(+47)911 55 911</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -186,35 +194,43 @@
 			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
-				<a href="#"
-					><img
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
-				/></a>
+					/>
+				</a>
 			</section>
+
 			<!-- NAV -->
 			<nav class="nav-container">
 				<ul>
@@ -238,6 +254,7 @@
 						<li>Myth Buster</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Party</h4>
 					<a href="">
@@ -259,6 +276,7 @@
 						<li>Vacancies</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Regional political parties</h4>
 					<a href="#">
@@ -277,6 +295,7 @@
 						<li>Fire Mountain</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Other Languages</h4>
 					<a href="#">
