--- a/pages/blog.html
+++ b/pages/blog.html
@@ -31,6 +31,7 @@
 				</ul>
 			</nav>
 		</header>
+
 		<main>
 			<h1>Stories</h1>
 			<section>
@@ -118,12 +119,12 @@
 			</section>
 		</main>
 
-		<!-- FOOTER -->
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
 				<img src="../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
+
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
@@ -139,6 +140,7 @@
 						</span>
 						<p>info@dragonballgang.com</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -150,6 +152,7 @@
 						</span>
 						<p>(+47)911 55 911</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -167,35 +170,43 @@
 			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
-				<a href="#"
-					><img
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
-				/></a>
+					/>
+				</a>
 			</section>
+
 			<!-- NAV -->
 			<nav class="nav-container">
 				<ul>
@@ -219,38 +230,48 @@
 						<li>Myth Buster</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Party</h4>
 					<a href="">
 						<li>About SSG</li>
 					</a>
+
 					<a href="#">
 						<li>Contact us</li>
 					</a>
+
 					<a href="#">
 						<li>Politicians</li>
 					</a>
+
 					<a href="#">
 						<li>Employees</li>
 					</a>
+
 					<a href="#">
 						<li>Laws and ethical codes</li>
 					</a>
+
 					<a href="#">
 						<li>Vacancies</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Regional political parties</h4>
 					<a href="#">
 						<li>Monster Village</li>
 					</a>
+
 					<a href="#">
 						<li>West City</li>
 					</a>
+
 					<a href="#">
 						<li>Papaya Island</li>
 					</a>
+
 					<a href="#">
 						<li>East City</li>
 					</a>
@@ -263,21 +284,27 @@
 					<a href="#">
 						<li>Norwegian</li>
 					</a>
+
 					<a href="#">
 						<li>Bosanski</li>
 					</a>
+
 					<a href="#">
 						<li>Türkçe</li>
 					</a>
+
 					<a href="#">
 						<li>日本</li>
 					</a>
+
 					<a href="#">
 						<li>中国語</li>
 					</a>
+
 					<a href="#">
 						<li>ภาษาไทย,</li>
 					</a>
+
 					<a href="#">
 						<li>தமிழ்</li>
 					</a>
