--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -31,12 +31,14 @@
 				</ul>
 			</nav>
 		</header>
+
 		<figure>
 			<img
 				src="../assets/sign-up/sign-up-banner.png"
 				alt="picture of the dragon ball gang"
 			/>
 		</figure>
+
 		<main>
 			<h1>Join SSG</h1>
 			<form action="" autocomplete="on">
@@ -113,12 +115,13 @@
 				</fieldset>
 			</form>
 		</main>
-		<!-- FOOTER -->
+
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
 				<img src="../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
+
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
@@ -134,6 +137,7 @@
 						</span>
 						<p>info@dragonballgang.com</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -145,6 +149,7 @@
 						</span>
 						<p>(+47)911 55 911</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -162,35 +167,43 @@
 			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
-				<a href="#"
-					><img
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
-				/></a>
+					/>
+				</a>
 			</section>
+
 			<!-- NAV -->
 			<nav class="nav-container">
 				<ul>
@@ -214,38 +227,48 @@
 						<li>Myth Buster</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Party</h4>
 					<a href="">
 						<li>About SSG</li>
 					</a>
+
 					<a href="#">
 						<li>Contact us</li>
 					</a>
+
 					<a href="#">
 						<li>Politicians</li>
 					</a>
+
 					<a href="#">
 						<li>Employees</li>
 					</a>
+
 					<a href="#">
 						<li>Laws and ethical codes</li>
 					</a>
+
 					<a href="#">
 						<li>Vacancies</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Regional political parties</h4>
 					<a href="#">
 						<li>Monster Village</li>
 					</a>
+
 					<a href="#">
 						<li>West City</li>
 					</a>
+
 					<a href="#">
 						<li>Papaya Island</li>
 					</a>
+
 					<a href="#">
 						<li>East City</li>
 					</a>
@@ -258,21 +281,27 @@
 					<a href="#">
 						<li>Norwegian</li>
 					</a>
+
 					<a href="#">
 						<li>Bosanski</li>
 					</a>
+
 					<a href="#">
 						<li>Türkçe</li>
 					</a>
+
 					<a href="#">
 						<li>日本</li>
 					</a>
+
 					<a href="#">
 						<li>中国語</li>
 					</a>
+
 					<a href="#">
 						<li>ภาษาไทย,</li>
 					</a>
+
 					<a href="#">
 						<li>தமிழ்</li>
 					</a>
