--- a/pages/about-ssg.html
+++ b/pages/about-ssg.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<title>About SSG</title>
 		<link rel="stylesheet" href="../css/reset.css" />
 		<link rel="stylesheet" href="../css/fonts.css" />
@@ -14,13 +15,15 @@
 	</head>
 	<body>
 		<header>
-			<a href="../index.html"
-				><img
+			<a href="../index.html">
+				<img
 					width="65"
 					height="50"
 					src="../assets/DBG logo.svg"
 					alt="SSG logo"
-			/></a>
+				/>
+			</a>
+
 			<nav>
 				<ul>
 					<li><a href="#">About SSG</a></li>
@@ -30,6 +33,7 @@
 				</ul>
 			</nav>
 		</header>
+
 		<main>
 			<article>
 				<h1>About SSG</h1>
@@ -62,12 +66,12 @@
 			</figure>
 		</main>
 
-		<!-- FOOTER -->
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
 				<img src="../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
+
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
@@ -83,6 +87,7 @@
 						</span>
 						<p>info@dragonballgang.com</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -94,6 +99,7 @@
 						</span>
 						<p>(+47)911 55 911</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -111,35 +117,43 @@
 			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
-				<a href="#"
-					><img
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
-				/></a>
+					/>
+				</a>
 			</section>
+
 			<!-- NAV -->
 			<nav class="nav-container">
 				<ul>
@@ -163,38 +177,48 @@
 						<li>Myth Buster</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Party</h4>
 					<a href="">
 						<li>About SSG</li>
 					</a>
+
 					<a href="#">
 						<li>Contact us</li>
 					</a>
+
 					<a href="#">
 						<li>Politicians</li>
 					</a>
+
 					<a href="#">
 						<li>Employees</li>
 					</a>
+
 					<a href="#">
 						<li>Laws and ethical codes</li>
 					</a>
+
 					<a href="#">
 						<li>Vacancies</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Regional political parties</h4>
 					<a href="#">
 						<li>Monster Village</li>
 					</a>
+
 					<a href="#">
 						<li>West City</li>
 					</a>
+
 					<a href="#">
 						<li>Papaya Island</li>
 					</a>
+
 					<a href="#">
 						<li>East City</li>
 					</a>
@@ -207,21 +231,27 @@
 					<a href="#">
 						<li>Norwegian</li>
 					</a>
+
 					<a href="#">
 						<li>Bosanski</li>
 					</a>
+
 					<a href="#">
 						<li>Türkçe</li>
 					</a>
+
 					<a href="#">
 						<li>日本</li>
 					</a>
+
 					<a href="#">
 						<li>中国語</li>
 					</a>
+
 					<a href="#">
 						<li>ภาษาไทย,</li>
 					</a>
+
 					<a href="#">
 						<li>தமிழ்</li>
 					</a>
