--- a/pages/blog-posts/how-to-perform.html
+++ b/pages/blog-posts/how-to-perform.html
@@ -14,13 +14,15 @@
 	</head>
 	<body>
 		<header>
-			<a href="../../index.html"
-				><img
+			<a href="../../index.html">
+				<img
 					width="65"
 					height="50"
 					src="../../assets/DBG logo.svg"
 					alt="SSG logo"
-			/></a>
+				/>
+			</a>
+
 			<nav>
 				<ul>
 					<li><a href="../about-ssg.html">About SSG</a></li>
@@ -137,12 +139,12 @@
 			</ul>
 		</aside>
 
-		<!-- FOOTER -->
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
 				<img src="../../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
+
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
@@ -158,6 +160,7 @@
 						</span>
 						<p>info@dragonballgang.com</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -169,6 +172,7 @@
 						</span>
 						<p>(+47)911 55 911</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -186,35 +190,43 @@
 			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
-				<a href="#"
-					><img
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
-				/></a>
+					/>
+				</a>
 			</section>
+
 			<!-- NAV -->
 			<nav class="nav-container">
 				<ul>
@@ -238,6 +250,7 @@
 						<li>Myth Buster</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Party</h4>
 					<a href="">
@@ -259,6 +272,7 @@
 						<li>Vacancies</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Regional political parties</h4>
 					<a href="#">
@@ -277,6 +291,7 @@
 						<li>Fire Mountain</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Other Languages</h4>
 					<a href="#">
