--- a/pages/politicians/piccolo.html
+++ b/pages/politicians/piccolo.html
@@ -14,13 +14,15 @@
 	</head>
 	<body>
 		<header>
-			<a href="../../index.html"
-				><img
+			<a href="../../index.html">
+				<img
 					width="65"
 					height="50"
 					src="../../assets/DBG logo.svg"
 					alt="SSG logo"
-			/></a>
+				/>
+			</a>
+
 			<nav>
 				<ul>
 					<li><a href="../about-ssg.html">About SSG</a></li>
@@ -30,6 +32,7 @@
 				</ul>
 			</nav>
 		</header>
+
 		<main>
 			<section>
 				<figure>
@@ -49,6 +52,7 @@
 					</p>
 				</div>
 			</section>
+
 			<article>
 				<p>
 					Consequat faucibus vel a, porttitor sed. Diam nunc, feugiat posuere
@@ -72,6 +76,7 @@
 					aliquet. Laoreet massa senectus non laoreet faucibus cras in.
 				</p>
 			</article>
+
 			<aside>
 				<section>
 					<a href="../polticians.html"
@@ -85,12 +90,12 @@
 			</aside>
 		</main>
 
-		<!-- FOOTER -->
 		<footer>
 			<!-- LOGO -->
 			<div class="logo-container">
 				<img src="../../assets/footer/footer DBG logo.svg" alt="ssg logo" />
 			</div>
+
 			<!-- CONTACT US -->
 			<section class="contact-us-container">
 				<h3>CONTACT US</h3>
@@ -106,6 +111,7 @@
 						</span>
 						<p>info@dragonballgang.com</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -117,6 +123,7 @@
 						</span>
 						<p>(+47)911 55 911</p>
 					</li>
+
 					<li>
 						<span>
 							<img
@@ -134,35 +141,43 @@
 			<!-- SOCIAL MEDIA -->
 			<section class="social-media-container">
 				<h4>SSG Social Media</h4>
-				<a href="#"
-					><img
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/tw-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/ig-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/fb-icon.svg"
 						alt="twitter icon"
-				/></a>
-				<a href="#"
-					><img
+					/>
+				</a>
+
+				<a href="#">
+					<img
 						width="42"
 						height="42"
 						src="../../assets/footer/footer-social-media-icons/yt-icon.svg"
 						alt="twitter icon"
-				/></a>
+					/>
+				</a>
 			</section>
+
 			<!-- NAV -->
 			<nav class="nav-container">
 				<ul>
@@ -186,6 +201,7 @@
 						<li>Myth Buster</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Party</h4>
 					<a href="">
@@ -207,6 +223,7 @@
 						<li>Vacancies</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Regional political parties</h4>
 					<a href="#">
@@ -225,6 +242,7 @@
 						<li>Fire Mountain</li>
 					</a>
 				</ul>
+
 				<ul>
 					<h4>Other Languages</h4>
 					<a href="#">
