fixed a formatting fault in the header

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 	<body>
 		<header>
-			<a href="index.html"
-				><img width="65" height="50" src="assets/DBG logo.svg" alt="SSG logo"
-			/></a>
+			<a href="index.html">
+				<img width="65" height="50" src="assets/DBG logo.svg" alt="SSG logo" />
+			</a>
 			<nav>
 				<ul>
 					<li><a href="pages/about-ssg.html">About SSG</a></li>
