updated alt text on the sign up banner, and added some white space on a line

--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="../css/sign-up.css" />
 		<link rel="stylesheet" href="../css/footer.css" />
 	</head>
+
 	<body>
 		<header>
 			<a href="../index.html">
@@ -35,7 +36,7 @@
 		<figure>
 			<img
 				src="../assets/sign-up/sign-up-banner.png"
-				alt="picture of the dragon ball gang"
+				alt="group picture of some SSG members"
 			/>
 		</figure>
 
@@ -54,6 +55,7 @@
 								placeholder="*Bob"
 							/>
 						</div>
+
 						<div class="right-lastname">
 							<label for="last-name">Last Name</label>
 							<input
@@ -64,19 +66,23 @@
 							/>
 						</div>
 					</div>
+
 					<label for="address">Address</label>
+
 					<input
 						type="text"
 						id="address"
 						name="address"
 						placeholder="Address 1"
 					/>
+
 					<input
 						type="text"
 						id="address2"
 						name="address2"
 						placeholder="Address 2"
 					/>
+
 					<div class="container">
 						<div class="left-postal">
 							<input
